naked email is hided

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="contact">
         <div class="form">
             <h1>Contact Us</h1>
-            <form action="https://formsubmit.co/harshaldhunde9102@gmail.com" method="POST">
+            <form action="https://formsubmit.co/548fd752f559d58211ba4b5e34a5e289" method="POST">
                 <input type="text" name="name" required placeholder="Name">
                 <input type="email" name="email" required placeholder="Email">
                 <input type="text" name="subject" required placeholder="Subject">
